--- a/nvtt_sys/Cargo.toml
+++ b/nvtt_sys/Cargo.toml
@@ -2,7 +2,7 @@
 name = "nvtt_sys"
 version = "0.1.0"
 authors = ["George Burton <burtonageo@gmail.com>"]
-license = "MIT/Apache"
+license = "MIT/Apache-2.0"
 description = "Low-level bindings to the nvtt library"
 keywords = ["compression", "texture", "tools", "nvidia", "image"]
 edition = "2018"
