--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,33 @@ license = "MIT/Apache-2.0"
 description = "High-level bindings to the nvtt library"
 keywords = ["compression", "texture", "tools", "nvidia", "image"]
 edition = "2018"
+exclude = ["./example_data/*"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cfg-if = "0.1.9"
+libc = "0.2"
+
+[dependencies.log]
+version = "0.4"
+default-features = false
+
+[dependencies.image]
+version = "0.22"
+default-features = false
+optional = true
+
+[dependencies.maybe-owned]
+version = "0.3"
+optional = true
+
+[dependencies.safe-transmute]
+version = "0.11.0-rc.2"
+optional = true
+
+[dependencies.nvtt_sys]
+path = "./nvtt_sys"
+
+[features]
+nvtt_image_integration = ["image", "maybe-owned", "safe-transmute"]
