Add more fields to cargo.toml

--- a/nvtt_sys/Cargo.toml
+++ b/nvtt_sys/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["George Burton <burtonageo@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "Low-level bindings to the nvtt library"
+repository = "https://github.com/burtonage/nvtt_rs"
+readme = "./Readme.md"
 keywords = ["compression", "texture", "tools", "nvidia", "image"]
 edition = "2018"
 build = "./build.rs"
