--- a/nvtt_sys/Cargo.toml
+++ b/nvtt_sys/Cargo.toml
@@ -9,7 +9,13 @@ readme = "./Readme.md"
 keywords = ["compression", "texture", "tools", "nvidia", "image"]
 edition = "2018"
 build = "./build.rs"
-exclude = ["./nvidia-texture-tools/data"]
+exclude = [
+    "./nvidia-texture-tools/data",
+    "./nvidia-texture-tools/project/vc8",
+    "./nvidia-texture-tools/project/vc9",
+    "./nvidia-texture-tools/project/vc10",
+    "./nvidia-texture-tools/project/vc12",
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
