--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "nvtt_rs"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["George Burton <burtonageo@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "High-level bindings to the nvtt library"
-repository = "https://github.com/burtonage/nvtt_rs"
+repository = "https://github.com/burtonageo/nvtt_rs"
 readme = "./Readme.md"
 keywords = ["compression", "texture", "tools", "nvidia", "image"]
 edition = "2018"
