--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ version = "0.3"
 optional = true
 
 [dependencies.safe-transmute]
-version = "0.11.0-rc.2"
+version = "0.11.0"
 optional = true
 
 [dependencies.nvtt_sys]
