--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "nvtt_sys/nvidia-texture-tools"]
 	path = nvtt_sys/nvidia-texture-tools
 	url = https://github.com/castano/nvidia-texture-tools
+	branch = 2.1.2
